--- a/Insta-frontend/package.json
+++ b/Insta-frontend/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "latest",
-    "@react-native-async-storage/async-storage": "latest",
-    "@react-native-community/slider": "latest",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/slider": "^4.5.5",
     "@react-navigation/bottom-tabs": "latest",
     "@react-navigation/native": "latest",
     "@react-navigation/native-stack": "latest",
@@ -22,16 +22,17 @@
     "lucide-react-native": "latest",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-gesture-handler": "^2.24.0",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "latest",
-    "react-native-screens": "latest",
-    "react-native-svg": "latest",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.8.0",
     "sonner-native": "latest"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
     "typescript": "^5.3.3"
   },
   "private": true
